<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    >

    <com.ft.mapp.widgets.ActionView
        android:id="@+id/setting_action"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:icon_visible="false"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/about"
        />

    <ImageView
        android:id="@+id/about_icon"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/about_app_verion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_icon" />

    <TextView
        android:id="@+id/about_uuid_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/user_id"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textIsSelectable="true"
        app:layout_constraintTop_toBottomOf="@+id/about_app_verion"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
